Fix engine rendering: always show engine emoji, show all word letters as coaches, adjust engine vertical alignment, change engine emojis, and make train background a pastel citrus yellow for a lighter, friendlier look

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -338,17 +338,20 @@ button.generate-style:active {
 .train-block {
   position: relative;
   z-index: 1;
-  /* Add a nice SVG background image for mountains and trees */
+  /* New pastel citrus yellow background */
+  background-color: #fff9e3; /* pastel citrus yellow */
+  /* Optional: keep or remove SVG background as desired */
+  /* background-image: none; */
+  /* If you want to keep the SVG mountains/trees, just let the yellow be underneath: */
   background-image: url('data:image/svg+xml;utf8,<svg width="800" height="120" viewBox="0 0 800 120" xmlns="http://www.w3.org/2000/svg"><polygon points="0,120 80,60 160,120" fill="%2396b3a0"/><polygon points="120,120 200,70 280,120" fill="%237e9e87"/><polygon points="240,120 340,50 440,120" fill="%23a8c4b0"/><polygon points="400,120 500,90 600,120" fill="%238aa08d"/><rect x="70" y="100" width="10" height="20" fill="%236b4e2a"/><circle cx="75" cy="100" r="15" fill="%234caf50"/><rect x="210" y="105" width="8" height="15" fill="%236b4e2a"/><circle cx="214" cy="105" r="10" fill="%23388e3c"/><rect x="330" y="105" width="10" height="15" fill="%236b4e2a"/><circle cx="335" cy="105" r="12" fill="%23388e3c"/></svg>');
   background-repeat: no-repeat;
   background-size: 100% 120px;
   background-position: bottom;
-  /* If your train block already has a background color, you can keep it or set it to transparent */
 }
 
 .rails {
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     left: 0;
     width: 100%;
     height: 20px;
@@ -432,4 +435,17 @@ select {
 .train-block {
   position: relative;
   z-index: 1;
+}
+
+
+.engine-emoji {
+  font-size: 2.5em;
+  margin: 0 10px 0 0;
+  display: flex;
+  align-items: flex-end;
+  height: 90px;        /* Same as train car */
+  line-height: 1;
+  /* Add this line to move it up */
+  position: relative;
+  top: -16px;          /* Try -10px to -20px for fine-tuning */
 }
